--- a/js-30/06 - Type Ahead/index-FINISHED.html
+++ b/js-30/06 - Type Ahead/index-FINISHED.html
@@ -36,6 +36,7 @@ function numberWithCommas(x) {
 }
 
 function displayMatches() {
+  console.log('this', this);
   const matchArray = findMatches(this.value, cities);
   const html = matchArray.map(place => {
     const regex = new RegExp(this.value, 'gi');
