--- a/js-30/File upload/index.html
+++ b/js-30/File upload/index.html
@@ -36,6 +36,35 @@
 			reader.onload = logFile;
             reader.readAsDataURL(file.files[0]);
     }   
+//     fetch('https://jsonplaceholder.typicode.com/todos/1')
+//   .then(resp => resp.blob())
+//   .then(blob => {
+//     const url = window.URL.createObjectURL(blob);
+//     const a = document.createElement('a');
+//     a.href = url;
+//     // the filename you want
+//     a.download = 'todo-1.json';
+//     document.body.appendChild(a);
+//     a.click();
+//     window.URL.revokeObjectURL(url);
+//     alert('your file has downloaded!'); // or you know, something with better UX...
+//   })
+//   .catch(() => alert('oh no!'));
+
+
+//   fetch('https://jsonplaceholder.typicode.com/todos/1').then((res) => {
+//     return res.blob()
+//   }).then((data) => {
+//     const a = document.createElement('a');
+//     const url = window.URL.createObjectURL(data)
+//     a.href = url;
+//     a.download = 'todo.json';
+//     a.style.display = "none";
+//     document.body.appendChild(a);
+//     a.click();
+//     console.log('data', url);
+//     window.URL.revokeObjectURL(data)
+//   })
     </script>
 </body>
 </html>
