--- a/js-30/15 - LocalStorage/index-FINISHED.html
+++ b/js-30/15 - LocalStorage/index-FINISHED.html
@@ -45,6 +45,18 @@
     this.reset();
   }
 
+  function createListItem(val) {
+    const li = document.createElement('li');
+    const input = document.createElement('input');
+    const label = document.createElement('label');
+    input.type = "checkbox";
+    input.checked = false;
+    label.textContent = val;
+    li.append(input);
+    li.append(label);
+    return li;
+  }
+
   function populateList(plates = [], platesList) {
     platesList.innerHTML = plates.map((plate, i) => {
       return `
@@ -57,6 +69,7 @@
   }
 
   function toggleDone(e) {
+    console.log(e.target)
     if (!e.target.matches('input')) return; // skip this unless it's an input
     const el = e.target;
     const index = el.dataset.index;
