--- a/js-30/promises/index.html
+++ b/js-30/promises/index.html
@@ -34,23 +34,23 @@ p.then(() => {
 //   console.log("tick 2");
 // });
 //normal function calling the api
-async function LogAll() {
-  console.log("One: Started");
-  const m1 = await new Promise((resolve, reject) => {
-    setTimeout(function() {
-      console.log("One: Completed");
-      return 'one completed'
-      resolve();
-    }, 1000);
-  });
-  const m2 = await new Promise((resolve, reject) => {
-    setTimeout(function() {
-      console.log("two: Completed");
-      return 'two completed'
-      resolve();
-    }, 1000);
-  });
-  return {m1, m2};
+// async function LogAll() {
+//   console.log("One: Started");
+//   const m1 = await new Promise((resolve, reject) => {
+//     setTimeout(function() {
+//       console.log("One: Completed");
+//       return 'one completed'
+//       resolve();
+//     }, 1000);
+//   });
+//   const m2 = await new Promise((resolve, reject) => {
+//     setTimeout(function() {
+//       console.log("two: Completed");
+//       return 'two completed'
+//       resolve();
+//     }, 1000);
+//   });
+//   return {m1, m2};
 //   console.log("Two: Started");
 //   await new Promise((resolve, reject) => {
 //     setTimeout(function() {
@@ -79,43 +79,39 @@ async function LogAll() {
 // }
 // let res = doAPICallInside().then(data => console.log(data));
 // console.log('res', res);
-const {m1, m2} = LogAll();
-console.log(m1, m2)
-console.log("starting auto retry")
-let pcount = 0;
-let retry = 0;
+//
 
-function defPromise(pcount) {
-  console.log("pcount when calling function", pcount)
-  return new Promise((res, rej) => {
-  console.log("pcount = ", pcount)
-  if(pcount > 2) {
-    setTimeout(() => {
-    res("yay success")
-  }, 5000);
-  } else {
-    console.log("inside reject pcount", pcount)
-    setTimeout(() => {
-    rej("hard luck")
-  }, 3000);
-  }
-});
-}
+// function defPromise(pcount) {
+//   console.log("pcount when calling function", pcount)
+//   return new Promise((res, rej) => {
+//   console.log("pcount = ", pcount)
+//   if(pcount > 2) {
+//     setTimeout(() => {
+//     res("yay success")
+//   }, 5000);
+//   } else {
+//     console.log("inside reject pcount", pcount)
+//     setTimeout(() => {
+//     rej("hard luck")
+//   }, 3000);
+//   }
+// });
+// }
 
-function runPromise() {
-  defPromise(pcount).then((data) => {
-    console.log(data);
-  }, (rej) => {
-    if(pcount < 3) {
-      pcount++;
-      console.log(rej);
-      runPromise()
-    } else {
-      console.log("ALL DONE!!")
-    }
-  })
-}
-runPromise();
+// function runPromise() {
+//   defPromise(pcount).then((data) => {
+//     console.log(data);
+//   }, (rej) => {
+//     if(pcount < 3) {
+//       pcount++;
+//       console.log(rej);
+//       runPromise()
+//     } else {
+//       console.log("ALL DONE!!")
+//     }
+//   })
+// }
+// runPromise();
 
     </script>
 </body>
